force-app/main/default/objects/Nurse_Review__c/Nurse_Review__c.object-meta.xml
<CustomObject>
    <description>Stores client review submissions for nurse services</description>
    <label>Nurse Review</label>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nurse Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>