force-app/main/default/objects/Nurse_Review__c/fields/Nurse__c.field-meta.xml
<CustomField>
    <fullName>Nurse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The nurse being reviewed</description>
    <label>Nurse</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Nurse Reviews</relationshipLabel>
    <relationshipName>Nurse_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>