force-app/main/default/objects/Nurse_Review__c/fields/Scheduled_Visit__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The scheduled visit this review relates to</description>
    <label>Scheduled Visit</label>
    <referenceTo>Scheduled_Visit__c</referenceTo>
    <relationshipLabel>Nurse Reviews</relationshipLabel>
    <relationshipName>Nurse_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>